--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jan 31 2022 00:13:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Feb 05 2022 23:35:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f08e21744d15b4bddf2dc5" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -75,7 +75,7 @@
           <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="link">@satoshiops</a><span class="red"></span>
         </div>
         <h1 data-w-id="79b5b226-ace5-00e7-36ec-53ef61734ad5" class="helmet-loop">Airlift Airwaves</h1>
-        <div class="text">We are on a mission to help the people of Tonga. We will deploy HF radios on the northern islands of Tonga. This will enable the Tongan people to give current reports of the situation on the ground.</div>
+        <div class="text">We&#x27;re on a mission to help the people of Tonga. Repairing their communications cables will take weeks. Satellite communications are unavailable or overloaded. We will deploy HF radios on Tonga&#x27;s isolated northern islands. This will let the Tongan people request assistance regardless of whether anything else works.</div>
         <div class="images-6-wrapper"><img src="images/satoshiops.png" loading="lazy" data-w-id="38cbf649-6726-78d6-24b6-f2922ffae1b6" sizes="(max-width: 479px) 99vw, 100vw" srcset="images/satoshiops-p-500.png 500w, images/satoshiops-p-800.png 800w, images/satoshiops.png 1000w" alt="" class="image-6">
           <div class="red-container"></div>
         </div>
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="circle-content-wrapper">
           <div class="image-cirlce-wrapper">
-            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga_1.jpg" loading="lazy" sizes="(max-width: 767px) 90vw, 500px" srcset="images/tonga_1-p-500.jpeg 500w, images/tonga_1-p-800.jpeg 800w, images/tonga_1.jpg 834w" alt=""></div>
+            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga-circle_1.svg" loading="lazy" alt=""></div>
             <div class="image-circle"><img src="images/tonga.jpg" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 767px) 65vw, 350px" srcset="images/tonga-p-500.jpeg 500w, images/tonga-p-800.jpeg 800w, images/tonga-p-1080.jpeg 1080w, images/tonga-p-1600.jpeg 1600w, images/tonga.jpg 1930w" alt="" class="image-7"></div>
           </div>
         </div>
@@ -94,7 +94,7 @@
     <div data-w-id="8a6556be-3aa8-fc09-d1a1-a74e1f541f5f" class="fourth-section"><img src="images/queenlaviniaairport.svg" loading="lazy" alt="" class="image-2">
       <div class="div-block-2">
         <div class="text-content">
-          <div class="text-block-2"><span class="text-span-2">The Solution</span><br> We will deploy radio communication equipment via parachute to the northern islands of Tonga that are the furthest from resources and most inaccessible by plane due to the ash covering the grass landing strips .</div>
+          <div class="text-block-2"><span class="text-span-2">The Solution</span><br> We will deploy radio communication equipment to Tonga&#x27;s northern islands. These are the most inaccessible as they are furthest from the capital. If necessary, we will parachute the equipment out of an airplane.</div>
         </div>
         <div class="line-wrapper">
           <div class="stroke-line-horizontal"></div>
@@ -107,17 +107,17 @@
         <h1 class="headin-1">That’s right: parachutes, </h1>
       </div>
       <div class="heading-container">
-        <h1 class="headin-1">radios and airplanes.</h1>
+        <h1 class="headin-1">radios, and airplanes.</h1>
       </div>
     </div>
     <div data-w-id="90c7ef35-0c20-86ed-ecef-d82dd68972e6" class="sixth-section">
       <div id="w-node-_94f4a0a6-8f21-c036-ea02-d3b68bdc9c6e-bddf2dc5" class="div-block-4">
         <div data-w-id="7be958af-6ae7-1929-3a0e-918ff0bf584d" class="div-block-8">
           <h1 class="heading">Donate</h1>
-          <div class="text-block-3">In order to secure our airplane, all equipment and have it prepared to deliver IN TONGA by parachute we need ~$55,000USD in the next 3 days.<br>‍<br>That is currently estimated at $9,800 per flight, we can touch 2 of the main northern islands with one flight operation.  We can reach multiple islands for each flight and deliver 500kg of payload with each airdrop.  This is current capability.</div>
+          <div class="text-block-3">In order to secure air cargo space to Tonga, or hire an airplane to perform an air-drop, we need your support. Air cargo charters may end up costing us as much as $250,000. <br><br>We have already raised over $50,000 -- enough to pay for the highly sophisticated radios we want to deliver, training for Tongans on how to use them, and much more.<br><br>Any extra money we raise will go to funding more radios, or vital additional supplies for Tonga. We would love to deliver highly sophisticated portable water desalination equipment to solve the life-threatening lack of drinking water many Tongan islanders currently face.</div>
         </div>
       </div>
-      <div id="w-node-_189a08ab-a117-eb4d-81e6-16213281997e-bddf2dc5" class="div-block-7"><img src="images/hf-radio.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 26vw, 33vw" srcset="images/hf-radio.jpg 500w, images/hf-radio.jpg 800w, images/hf-radio.jpg 1343w" alt="" class="image-3"></div>
+      <div id="w-node-_189a08ab-a117-eb4d-81e6-16213281997e-bddf2dc5" class="div-block-7"><img src="images/hf-radio.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 26vw, 33vw" srcset="images/hf-radio-p-500.jpeg 500w, images/hf-radio-p-800.jpeg 800w, images/hf-radio.jpg 1343w" alt="" class="image-3"></div>
     </div>
     <div data-w-id="a94b9ad0-318d-6c81-9d64-516fcd36edcc" class="div-block-5">
       <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo image-4"><iframe src="https://www.youtube.com/embed/jiOT0fmog3U?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Bitcoin Relief For Tonga - Short Version"></iframe></div>
