--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Feb 05 2022 23:35:20 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last published Block Height 721987  -->
+
 <html data-wf-page="61f0c5b8890ad98cf8b26988" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@
   <div data-collapse="all" data-animation="over-left" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div data-w-id="2ea186b4-8bcc-de7c-f46a-f73756ef36e0" class="navbar-container">
       <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e1-56ef36df" class="nav-left-wrapper">
-        <a href="index.html" class="w-nav-brand"><img src="images/btc-relief-logo.svg" loading="lazy" width="37" id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e3-56ef36df" alt="" class="image-8"></a>
+        <a href="index.html" class="w-nav-brand"><img src="images/Logo-mark.svg" loading="lazy" width="37" id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e3-56ef36df" alt="" class="image-8"></a>
         <div class="menu-button w-nav-button">
           <div class="icon w-icon-nav-menu"></div>
         </div>
