--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Feb 05 2022 23:35:20 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last published Block Height 721987  -->
+
 <html data-wf-page="61f08e21744d15b4bddf2dc5" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
   <div data-collapse="all" data-animation="over-left" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div data-w-id="2ea186b4-8bcc-de7c-f46a-f73756ef36e0" class="navbar-container">
       <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e1-56ef36df" class="nav-left-wrapper">
-        <a href="index.html" aria-current="page" class="w-nav-brand w--current"><img src="images/btc-relief-logo.svg" loading="lazy" width="37" id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e3-56ef36df" alt="" class="image-8"></a>
+        <a href="index.html" aria-current="page" class="w-nav-brand w--current"><img src="images/Logo-mark.svg" loading="lazy" width="37" id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e3-56ef36df" alt="" class="image-8"></a>
         <div class="menu-button w-nav-button">
           <div class="icon w-icon-nav-menu"></div>
         </div>
@@ -76,7 +76,7 @@
         </div>
         <h1 data-w-id="79b5b226-ace5-00e7-36ec-53ef61734ad5" class="helmet-loop">Airlift Airwaves</h1>
         <div class="text">We&#x27;re on a mission to help the people of Tonga. Repairing their communications cables will take weeks. Satellite communications are unavailable or overloaded. We will deploy HF radios on Tonga&#x27;s isolated northern islands. This will let the Tongan people request assistance regardless of whether anything else works.</div>
-        <div class="images-6-wrapper"><img src="images/satoshiops.png" loading="lazy" data-w-id="38cbf649-6726-78d6-24b6-f2922ffae1b6" sizes="(max-width: 479px) 99vw, 100vw" srcset="images/satoshiops-p-500.png 500w, images/satoshiops-p-800.png 800w, images/satoshiops.png 1000w" alt="" class="image-6">
+        <div class="images-6-wrapper"><img src="images/plane-web.png" loading="lazy" data-w-id="38cbf649-6726-78d6-24b6-f2922ffae1b6" sizes="(max-width: 479px) 99vw, 100vw" srcset="images/plane-web.png 500w, images/plane-web.png 800w, images/plane-web.png 1000w" alt="" class="image-6">
           <div class="red-container"></div>
         </div>
       </div>
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="circle-content-wrapper">
           <div class="image-cirlce-wrapper">
-            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga-circle_1.svg" loading="lazy" alt=""></div>
+            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga-circle.svg" loading="lazy" alt=""></div>
             <div class="image-circle"><img src="images/tonga.jpg" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 767px) 65vw, 350px" srcset="images/tonga-p-500.jpeg 500w, images/tonga-p-800.jpeg 800w, images/tonga-p-1080.jpeg 1080w, images/tonga-p-1600.jpeg 1600w, images/tonga.jpg 1930w" alt="" class="image-7"></div>
           </div>
         </div>
